# smcPrime

./: .gitignore  LICENSE  README.md  smcprime.h
rust/: Cargo.toml
rust/src/: lib.rs
typescript/: README.md  package-lock.json  package.json  smcprime.ts  tsconfig.json
